Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11365

Dereferencing null pointer in TopNNode

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.2.0, Impala 4.1.1
    • None
    • None
    • ghx-label-3

    Description

      In the constructor of TopNNode, if pnode.partition_comparator_config_ is NULL, we initialise partition_cmp_ with a NULL pointer. However, when initialising partition_heaps_, we dereference partition_cmp_ because ComparatorWrapper expects a reference.

      This has so far not lead to a crash because in this case the comparator of partition_heaps_ is not used, but assigning a NULL pointer to a reference is undefined behaviour.

      Attachments

        Activity

          People

            daniel.becker Daniel Becker
            daniel.becker Daniel Becker
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: